--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: npm ci
-      - name: Build project
+      - name: Build & Deploy project
         run: |
          npm run build
          echo "Deploying project..."
