add ga event object

--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -7,5 +7,5 @@ jobs:
       - name: Output event details
         run: |
           echo "Issue opened by ${{ github.actor }} on ${{ github.repository }} at ${{ github.event.issue.created_at }}." 
-          echo "Issue ${{ github.event.issue }}Issue title: ${{ github.event.issue.title }} and Issue body: ${{ github.event.issue.body }}"
+          echo "Issue ${{ toJson(github.event.issue) }}Issue title: ${{ github.event.issue.title }} and Issue body: ${{ github.event.issue.body }}"
         
